--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 body  {
-  background-image: url("https://d2v9y0dukr6mq2.cloudfront.net/video/thumbnail/Sxlh_vs3it7xa78y/snow-seamless-loop-with-light-ray-moving-particles-brown-background-uhd-4k-3840x2160_heydlmwa_thumbnail-full01.png");
+  background-image: url("https://newevolutiondesigns.com/images/freebies/nature-hd-background-4.jpg");
   background-color: #cccccc;
 }
 div {
